Ethereum explorer done

--- a/nfthub/public/index.html
+++ b/nfthub/public/index.html
@@ -31,7 +31,7 @@
     content="NFTHub With Soul Bound NFTs" />
     <title>NFT Hub</title>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="stylesheet" type="text/css" href="./bootstrap.css"> 
+    <link rel="stylesheet" type="text/css" href="/bootstrap.css"> 
   </head>
   <body>
   <body>
