--- a/nfthub/public/index.html
+++ b/nfthub/public/index.html
@@ -2,33 +2,33 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/assets/img/boredApeYatchBgLess.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-    <meta name="author" content="NFTHub">
-    <meta name="description" content="NFT Hub With Soul Bound NFTs" />
-    <meta itemprop="name" content="NFTHub">
+    <meta name="author" content="BlockVerse">
+    <meta name="description" content="BlockVerse With Multiuse NFTs" />
+    <meta itemprop="name" content="BlockVerse">
     <meta name="google-site-verification" content=IJDnVQ-OYimRHIIZN-6-OswA7ma_eSKcJXjcv8Yb02s />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <meta property="og:title" content="NFTHub 2022" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/assets/img/boredApeYatchBgLess.png" />
+    <meta property="og:title" content="BlockVerse 2022" />
     <meta property="og:type" content="website" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@NFTHub" />
-    <meta name="twitter:creator" content="@NFTHub" />
-    <meta property="og:url" content="https://nfthub.vashishthchaudhary.repl.co/" />
+    <meta name="twitter:site" content="@BlockVerse" />
+    <meta name="twitter:creator" content="@BlockVerse" />
+    <meta property="og:url" content="http://blockverse.vashisht.co/" />
     <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:image:width" content="851" />
     <meta property="og:image:height" content="315" />
-    <meta property="og:image:alt" content="NFTHub" />
+    <meta property="og:image:alt" content="BlockVerse" />
     <meta property="og:image" content="https://user-images.githubusercontent.com/76911582/171133278-0eac7d43-fca2-43fa-b90a-e8907ce346c3.png" width="16" height="60" />
   <meta property="og:image:secure_url"
     content="https://user-images.githubusercontent.com/76911582/171133278-0eac7d43-fca2-43fa-b90a-e8907ce346c3.png" />
   <meta name="twitter:image"
     content="https://user-images.githubusercontent.com/76911582/171133278-0eac7d43-fca2-43fa-b90a-e8907ce346c3.png" />
   <meta property="og:description"
-    content="NFTHub With Soul Bound NFTs" />
+    content="BlockVerse With Soul Bound NFTs" />
     <title>NFT Hub</title>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="stylesheet" type="text/css" href="/bootstrap.css"> 
