blockerse editing done with bugs fix

--- a/nfthub/public/index.html
+++ b/nfthub/public/index.html
@@ -29,7 +29,7 @@
     content="https://user-images.githubusercontent.com/85776968/231350888-c9afbd92-4763-4364-9597-5bf9c0ad318f.png" />
   <meta property="og:description"
     content="BlockVerse With Soul Bound NFTs" />
-    <title>NFT Hub</title>
+    <title>BlockVerse</title>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="stylesheet" type="text/css" href="/bootstrap.css"> 
   </head>
