public org detail updated

--- a/nfthub/public/index.html
+++ b/nfthub/public/index.html
@@ -12,7 +12,7 @@
     <meta itemprop="name" content="BlockVerse">
     <meta name="google-site-verification" content=IJDnVQ-OYimRHIIZN-6-OswA7ma_eSKcJXjcv8Yb02s />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/assets/img/boredApeYatchBgLess.png" />
-    <meta property="og:title" content="BlockVerse 2022" />
+    <meta property="og:title" content="BlockVerse" />
     <meta property="og:type" content="website" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@BlockVerse" />
